# Crossbill

./: .gitignore  BACKEND_ARCHITECTURE_REVIEW.md  Dockerfile  LICENSE  README.md  SECURITY_REPORT.md  build-for-docker-hub.sh  package-lock.json  package.json
backend/: .env.example  .gitignore  Claude.md  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_books_chapters_update_highlights.py  002_remove_file_path_from_books.py  003_add_cover_to_books.py  005_add_fulltext_search_to_highlights.py  006_add_chapter_number_to_chapters.py  007_add_tags_table.py  009_add_highlight_tags_table.py  009_add_soft_delete_to_book_tags.py  010_add_highlight_highlight_tags_join_table.py  011_add_highlight_tag_groups_table.py  012_add_bookmarks_table.py  013_add_users_table.py  014_add_hashed_password_to_users.py  015_rename_name_to_email_in_users.py  016_add_content_hash_to_highlights.py  017_add_content_hash_to_books.py  018_add_last_viewed_to_books.py  019_add_description_to_books.py  020_add_language_and_page_count_to_books.py  022_add_unique_constraint_to_user_email.py  023_update_book_cover_urls_to_new_endpoint.py
backend/crossbill/: config.py  cover_service.py  exceptions.py  main.py  models.py  repositories.py  schemas.py  services.py
backend/crossbill/repositories/: __init__.py  chapter_repository.py  highlight_tag_repository.py  tag_repository.py
backend/crossbill/routers/: books.py  highlights.py
backend/crossbill/schemas/: __init__.py  book_schemas.py  chapter_schemas.py  highlight_schemas.py  highlight_tag_schemas.py
backend/crossbill/services/: __init__.py  book_service.py  cover_service.py  highlight_service.py  highlight_tag_service.py  tag_service.py
backend/inkwell/: main.py  models.py  repositories.py  schemas.py  services.py
backend/inkwell/routers/: highlights.py
backend/src/: auth.py  config.py  database.py  exceptions.py  main.py  models.py  utils.py
backend/src/repositories/: __init__.py  book_repository.py  bookmark_repository.py  chapter_repository.py  highlight_repository.py  highlight_tag_repository.py  tag_repository.py  user_repository.py
backend/src/routers/: auth.py  books.py  flashcards.py  highlights.py  users.py
backend/src/schemas/: __init__.py  auth_schemas.py  book_schemas.py  bookmark_schemas.py  highlight_schemas.py  highlight_tag_schemas.py  settings_schemas.py  tag_schemas.py  user_schemas.py
backend/src/services/: __init__.py  auth_service.py  book_service.py  bookmark_service.py  cover_service.py  flashcard_service.py  highlight_service.py  highlight_tag_service.py  tag_service.py  users_service.py
backend/tests/: conftest.py  test_bookmarks.py  test_books.py  test_highlights.py  test_tag_groups.py  test_utils.py
frontend/: .gitignore  .prettierignore  README.md  claude.md  implementation_plan.md  index.html  orval.config.ts  package-lock.json  (+3 more)
(+116 files in other folders)
